css/style.css
/* VARIABLES */

:root {
    --main-font-size: 12px;
    --dropbox-btn-bg: #0061FF;
    --dropbox-btn-bg-hov: #004cc5;
    --dropbox-hero-bg: #B4D0E7;
    --grey-line-col: #dfdfdf;
    --column-padding: 20px;
}


/* RESET */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: 'Open Sans', sans-serif;
    font-size: var(--main-font-size)
}
ul, li, menu {
    list-style: none;
}

a {
    text-decoration: none;
    color: currentColor;
}

img {
    max-width: 100%;
}

/* BASE LAYOUT */

.container-large {
    max-width: 100%;
    margin: 0 auto;
}

.container-medium {
    max-width: 960px;
    margin: 0 auto;
}

.container-small {
    max-width: 860px;
    margin: 0 auto;
}

.row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.row-reverse {
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: wrap;
}

.vertical-row {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}


.btn-default {
    display: inline-block;
    background-color: var(--dropbox-btn-bg);
    color: white;
    font-weight: 500;
    text-align: center;
    padding: 12px 12px;
} 

.btn-default:hover {
    background-color: var(--dropbox-btn-bg-hov);
} 

.btn-alt {
    display: inline-block;
    background-color: white;
    border: 1px solid black;
    color: black;
    font-weight: 500;
    text-align: center;
    padding: 12px 12px;
} 

.btn-alt:hover {
    background-color: rgb(245, 245, 245);
} 

h1 {
    font-size: 56px;
    font-weight: 900;
    line-height: 120%;
}

h2 {
    font-size: 36px;
    line-height: 42px;
    margin-bottom: 40px;
}

h3 {
    font-size: 22px;
    line-height: 28px;
    margin-bottom: 20px;
}

h4 {
    font-size: 14px;
    line-height: 18px;
    margin-bottom: 18px;
}


/* COL SIZES */

.col-2 {
    flex-basis: calc((100% / 12) * 2);
}
 
.col-4 {
    flex-basis: calc((100% / 12) * 4);
}

.col-6 {
    flex-basis: calc((100% / 12) * 6);
}
 
.col-8 {
    flex-basis: calc((100% / 12) * 8);
}
 
.col-12 {
    flex-basis: calc((100% / 12) * 12);
}
 
/* HEADER */

.header-nav {
    justify-content: space-between;
    align-items: center;
    padding: 5px 10px;
}

.nav-left,
.nav-right {
    align-items: center;
}

.nav-left a,
.nav-right a {
    padding: 10px 20px;
}

.header-nav a,
.header-nav img {
    display: block;
}

.nav-left .col:not(.header-logo):hover,
.nav-right .col:hover {
    background-color: rgb(245, 245, 245)
}

/* HERO */

.page-hero {
    background-color: var(--dropbox-hero-bg);
    margin-bottom: 80px;
    padding-block: 40px 20px;
}

.hero-title {
    margin-bottom: 35px;
}

.hero-content .vertical-row {
    align-items: flex-start;
    gap: 40px;
}

.hero-content p {
    font-weight: 400;
}

.hero-arrow {
    font-size: 48px;
    flex-grow: 1;
    display: flex;
    align-items: end;
}

.hero-image {
    transform-origin: 0 0;
    transform: scale(120%) translateX(-5px);
}

/* PRICE PLAN SECTION */

.price-plan .col-12,
.price-plan .col-4 {
    padding: var(--column-padding)
}

.price-plan .col-4 {
    margin-bottom: 20px;
} 

.price-plan-selection {
    margin-bottom: 40px;
}

.radio-btn {
    vertical-align: middle;
    transform: scale(150%);
    margin-right: 5px;
}

.radio-label {
    margin-right: 40px;
}

/* PRICE PLAN CARDS */

.price-plan-card {
    border: 1px solid var(--grey-line-col);
    gap: 25px;
    padding-bottom: 20px;
    min-height: 100%;
}

.price-plan-card .col-v {
    padding-inline: 25px;
}

.price-card-header {
    text-align: center;
    border-bottom: 1px solid var(--grey-line-col);
    padding: 15px;
}

.price-plan h3 {
    margin-bottom: 5px;
}

.price-plan .card-price {
    font-weight: 700;
    margin-bottom: 15px;
}

.price-plan .card-timeframe {
    color: rgb(128, 128, 128);
}

.price-plan-card li {
    display: flex;
    align-items: baseline;
    margin-bottom: 20px;
}

.list-icon,
.list-icon-check {
    padding-right: 10px;
}

.list-icon-check {
    color: var(--dropbox-btn-bg);
}

.card-btn {
    margin-bottom: 35px;
    width: 100%;
}

.card-link {
    text-decoration: underline;
    color: var(--dropbox-btn-bg);
    margin-bottom: 35px;
    display: inline-block;
}

.plan-cta::after {
    content: '';
    display: block;
    height: 1px;
    width: 50px;
    background-color: var(--grey-line-col);
}

.plan-highlights p {
    font-weight: 700;
    margin-bottom: 25px;
}


/* 1st METHOD FOR CUSTOM LIST STYLE */

/* [class^="list-icon"] {
    background-repeat: no-repeat;
    background-size: 14px;
    padding-left: 22px;
    background-position: 0px 1px;
}

.list-icon-user {
    background-image: url(../img/list-icons/user-solid.svg);
}

.list-icon-users {
    background-image: url(../img/list-icons/users-solid.svg);
    background-size: 17px;
    background-position: 0px 3px;
}

.list-icon-folder {
    background-image: url(../img/list-icons/folder-solid.svg);
}

.list-icon-share {
    background-image: url(../img/list-icons/share-nodes-solid.svg);
} */

/* 2nd METHOD FOR CUSTOM LIST STYLE */

/* .plan-highlights li {
    position: relative;
    padding-left: 22px;
}

.list-icon-check {
    position: absolute;
    top: 1px;
    left: 0;
    color: var(--dropbox-btn-bg);
    font-size: 16px;
} */


/* WIDE CARD */

.col-12.wide-card {
    padding: 0 var(--column-padding);
    margin-bottom: 25px;
}

.wide-card .col-4 {
    padding: 0 0 0 calc(var(--column-padding) + 40px);
    margin: 0;
}

.wide-card-btn {
    width: 100%;
    margin: 0;
}

.price-card-content p:not(:last-child) {
    font-weight: bold;
    margin-bottom: 40px;
}


/* LARGE IMAGE AND TEXT SECTION */

.large-img-text .col-8,
.large-img-text .col-4 {
    padding: var(--column-padding);
}

.large-img-text {
    font-size: 15px;
    margin-block: 100px;
}

.large-img-text .col-4 * {
    margin-bottom: 35px;
}

.large-card-text {
    position: relative;
    top: 6%;
}


/* DROPBOX OPERATIONS SECTION */


.dropbox-operations .col-12,
.dropbox-operations .col-4 {
    padding: var(--column-padding);
}

.dropbox-operations {
    margin-block: 100px;
}


/* DROPBOX CLIENTS */

.dropbox-clients .col-8 {
    padding: var(--column-padding);
    margin-bottom: 80px;
}



/* DROPBOX CLIENT GRID */

.client-grid .col {
    flex-basis: calc(100% / 3);
}

.client-grid .col-6 {
    aspect-ratio: 1 / 1;
}

.logo-green {
    border: 10px solid #D1E9CD;
    background-color: #A2D39B;
}

.logo-bordeau {
    background-color: #61082B;
}
.logo-blue {
    background-color: #0093CE;
}

.logo-red {
    background-color: #FF1C1C;
}

.logo-dark-red {
    background-color: #D5001F;
}
.logo-grey {
    background-color: #B4D0E7;
}
.logo-dark-blue {
    background-color: #0D2481;
}
.logo-yellow {
    background-color: #FFD830;
}

.client-grid .main-square {
    padding: 2%;
    background-color: #F5F5F5;
}

.client-grid .main-square p,
.client-grid .main-square img {
    margin-bottom: 12%;
    font-size: 1vw;
    font-weight: 200;
}

.client-grid .main-square img {
    display: block;
    max-width: 50%;
}

.client-grid .col-6 img {
    display: block;
    filter: invert(1);
    max-width: 50%;
    margin: 0 auto;
}

.cta {
    background-color: var(--dropbox-hero-bg);
    color: #620F31;
    padding-block: 80px;
    margin-bottom: 100px;
}

.cta h2 {
    margin: 0;
}

.cta .row {
    align-items: baseline;
}

.cta .col-8,
.cta .col-4 {
    padding: var(--column-padding);
}

.cta .col-8 {
    padding-right: 40px;
}

.cta .btn-alt {
    border: none;
    padding: 10px 30px;
}

/* FAQ */

.faq {
    padding-bottom: 80px;
    margin-bottom: 80px;
}

.faq > div {
    padding: 0 var(--column-padding)
}

.faq p {
    font-size: 14px;
    font-weight: 600;    
    padding: 30px 0;
}

.faq div:nth-of-type(even) {
    border-block: 1px solid rgb(36, 36, 36);
}

.faq-question {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding-right: 30px;
}

/* FOOTER */

.page-footer {
    background-color: black;
    color: white;
    padding: 40px 0;
}

.page-footer .row {
    justify-content: space-between;
    padding-bottom: 50px;
}

.page-footer li {
    font-size: 11px;
    margin-bottom: 12px;
}


.language-box {
    display: inline-block;
    color: #dfdfdf;
    border-top: 1px solid currentColor;
    padding: 35px 15px 0 0px;
}

.language-box * {
    display: inline-block;
    padding-right: 6px;
}








/* DEBUG */

.debug [class^="col"] {
    border: 1px dotted fuchsia;
}


.debug .dropbox-operations .col-4 {

    min-height: 200px;

}

